src/test/deca/context/valid/12_Not.deca
// Description:
//    Test Not
//
// Résultats:
//
//
// Historique:
//    cree le 16/01/2022

{
        boolean a = !false;
}
